My Css/index.css
:root {
    --primary-color: #0057B8;
    --secondary-color: #071A35;
    --accent-color: #00C8FF;
    --bg-dark-obsidian: #0b0f19;
    --text-light: #f8f9fa;
}

@font-face {
    font-family: Atma;
    src: url(../Fonts/Atma/Atma-SemiBold.ttf) format('truetype');

}

@font-face {
    font-family: Bungee;
    src: url(../Fonts/Bungee/Bungee-Regular.ttf) format('truetype');
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    width: 100%;
    min-height: 100vh;
    background-color: var(--secondary-color);
    color: var(--text-light);
}

/* Nav Styling */

.navbar{
    position:fixed;
    top:0;
    left:0;
    width:100%;
    height:80px;
    display:flex;
    align-items:center;
    justify-content:space-between;
    padding:12px 5%;
    z-index:1000;
     background: linear-gradient(90deg,
            var(--secondary-color) 0%,
            var(--secondary-color) 5%,
            var(--primary-color) 50%,
            var(--accent-color) 100%);
    backdrop-filter:blur(12px);
    font-family: Atma;
    
}
.navbar-brand{
    display:flex;
    align-items:center;
    gap:10px;
    text-decoration:none;
    flex-shrink:0;
}

.Logo{
   width: 52px;
    height: 52px;
    object-fit: cover;
    object-position: center;
    border-radius: 50%;
    border: 3px solid var(--secondary-color); 
    outline: 2px solid var(--accent-color); 
    outline-offset: 3px;          
    transition: outline-color 0.3s ease, outline-offset 0.3s ease;
}

.navbar-brand h2{
     font-weight: 400;
    font-size: 2rem;
    color: var(--accent-color);
    margin: 0;
    white-space:nowrap;
    display:inline-block;
}

.accent{
    color:var(--text-light);
}

.nav-search{
    flex:1;
    display:flex;
    justify-content:center;
    align-items:center;
}

.nav-search .form-control{
    width:100%;
    max-width:300px;
    height:45px;
    border:none;
    outline:none;
    border-radius:30px;
    padding:0 20px;
    font-size:1rem;
    background:rgba(255,255,255,.08);
    color:var(--text-light);
    font-family: Bungee;
}

.nav-search .form-control::placeholder{
    color:var(--secondary-color);
}

.nav-search .btn {
    margin-left: 12px;
    width: 45px;
    height: 45px;
    border: none;
    border-radius: 50%;
    background: var(--accent-color); 
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center; 
    box-sizing: border-box;
    padding: 0;
}
.nav-search .btn i{
    color:var(--text-light);
    font-size:1.4rem;
}

.icons{
    display:flex;
    align-items:center;
    gap:12px;
    flex-shrink:0;
}

.icons > i{
   font-size: 1.4rem;
    width: 45px;
    height: 45px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    background-color: var(--accent-color);
}

.icons .ri-heart-fill {
    color: red;
    background-color: var(--accent-color);
}

.icons .ri-shopping-cart-fill {
    color: var(--text-light);
}

.icons .user-profile {
    font-size: 1rem;
    color: var(--text-light);
    display: flex;
    align-items: center;
    gap: 12px;
    padding: 4px 16px 4px 20px;
    border: 2px solid rgba(255, 255, 255, 0.2);
    border-radius: 30px;
    height: 45px;
}

.icons .user-profile p {
    font-family: Atma;
    margin: 0;
    white-space: nowrap;
}
.icons .user-profile i {
    font-size: 1.4rem;
}
/* End Of Nav Styling */

/* Hero Section */

.hero {
    width: 100%;
    height: 600px;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 5%;
    background-color: var(--secondary-color);
    overflow: hidden;
}

.btn {
    color: var(--text-light);
    font-weight: 700;
    font-family: Atma;
    padding: 10px 30px;
    background: rgba(0, 200, 255, 0.88);
    box-shadow: 0 0 15px rgba(0, 200, 255, 0.4);
    border-radius: 25% 10%;
}

.hero h1 {
    color: var(--accent-color);
    font-family: Atma;
    font-size: 1.9rem;
    font-weight: 700;
}

.accent {
    color: var(--text-light);
    font-weight: 700;
}

.hero p {
    color: var(--text-light);
    font-size: 1.1rem;
    font-family: Atma;
    line-height: 1.7;
}

.hero img {
    width: 220px;
    height: 220px;
    object-fit: cover;
    border-radius: 50%;
    border: 6px solid var(--secondary-color);
    padding: 8px;
    background-color: var(--text-light);
    animation: float 4s ease-in-out infinite;
}

@keyframes float {
    0% {
        transform: translateY(0px);
    }

    50% {
        transform: translateY(-10px);
    }

    100% {
        transform: translateY(0px);
    }
}

.custom-shape-divider-bottom-1781150103 {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
    transform: rotate(180deg);
}

.custom-shape-divider-bottom-1781150103 svg {
    display: block;
    width: calc(100% + 1.3px);
    height: 90px;
}

.custom-shape-divider-bottom-1781150103 .shape-fill {
    fill: var(--text-light);
}

/* End Of Hero Styling */

/* First Landing Styling */
.featured-products {
    width: 100%;
    padding: 3px 5% 0;
    margin-bottom: 20px;
}

.section-header {
    display: flex;
    justify-content: space-between;
    padding-top: 20px;
}

.section-header h2 {
    letter-spacing: 3px;
    font-weight: 100;
    color: var(--accent-color);
    font-family: Bungee;
}

.see-all-btn {
    text-decoration: none;
    color: var(--text-light);
    font-weight: 700;
    font-family: Atma;
    padding: 10px 30px;
    background: rgba(0, 200, 255, 0.88);
    box-shadow: 0 0 15px rgba(0, 200, 255, 0.4);
    border-radius: 25% 10%;
}

.see-all-btn:hover {
    transform: translateY(-3px);
}

hr {
    border: none;
    height: 3px;
    background: linear-gradient(to right,
            var(--accent-color),
            var(--text-light),
            var(--accent-color));
    margin: 10px 0;
}

.products-wrapper {
    display: flex;
    gap: 20px;
    margin: 30px auto;
}
/* ... */

